--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,6 +20,9 @@ phases:
       - echo Writing image definitions file...
       # This file is crucial for CodeDeploy to know which image to deploy
       - printf '[{"name":"lab7-webapp","imageUri":"%s"}]' $ECR_REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION > imagedefinitions.json
+      - echo "--- Contents of imagedefinitions.json ---"
+      - cat imagedefinitions.json
+      - echo "--- End of imagedefinitions.json ---"
 
 artifacts:
   files:
