--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,4 +29,4 @@ phases:
 artifacts:
   files:
     - imagedefinitions.json
-    - appspec.yaml # This line is crucial
+    #- appspec.yaml # This line is crucial
